# MoE-GS-main

./: .gitignore  README.md  SETUP_UV.md  THIRDPARTY_RECOVERY.md  environment.yml  helper_model.py  pyproject.toml  render_E3.py  render_E3_tech.py  render_E4.py  requirements.txt  train_E3.py  train_E3_tech.py  train_E4.py
gaussian_renderer/: network_gui.py
scene/: c_gaussian_model.py  cameras.py  dataset_readers.py  gaussian_model.py
scripts/: flow_utils.py  pre_n3d.py  pre_n3d_colmap.py  pre_technicolor.py
scripts_MoE-GS/: train_E3_tech.sh
submodules/diff_gaussian_rasterization_df/: setup.py
utils/: flow_vis.py  graphics_utils.py
